# serial_16550

./: Cargo.toml  README.md
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
src/: backend.rs  config.rs  error.rs  lib.rs  spec.rs  tty.rs
